created Benefits block

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="./img/odigo_free-file.png">
 </head>
 <body>
+
     <header class="header">
         <div class="wrapper">
 
@@ -57,9 +58,69 @@
                         </p>
                     </fieldset>
                 </form>
+                <!-- /intro -->
             </div>
             <!-- /wrapper -->
         </section>
+        <!-- /intro -->
+
+        <section class="benefits">
+            <div class="benefits__wrapper">
+                <h2 class="benefits__title">Benefits of Odigo</h2>
+
+                <div class="benefits__cards">
+
+                    <div class="benefits__card">
+
+                        <div class="benefits__card-pic">
+                            <img src="./img/svg/Icon_1.svg" alt="Welcome to Odigo!">
+                        </div>
+
+                        <h3 class="benefits__card-title">Welcome to Odigo!
+                        </h3>
+                        <p class="benefits__card-desc">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+
+                        <a href="#" class="benefits__card-more">LEARN MORE</a>
+
+                    </div>
+                    <!-- /benefits__card -->
+
+                    <div class="benefits__card">
+                        
+                        <div class="benefits__card-pic">
+                            <img src="./img/svg/Icon_2.svg" alt="Your Personal Japan Guide">
+                        </div>
+
+                        <h3 class="benefits__card-title">Your Personal Japan Guide
+                        </h3>
+                        <p class="benefits__card-desc">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+
+                        <a href="#" class="benefits__card-more">LEARN MORE</a>
+
+                    </div>
+                    <!-- /benefits__card -->
+
+                    <div class="benefits__card">
+                        
+                        <div class="benefits__card-pic">
+                            <img src="./img/svg/Icon_3.svg" alt="Promoting Local Businesses">
+                        </div>
+
+                        <h3 class="benefits__card-title">Promoting Local Businesses
+                        </h3>
+                        <p class="benefits__card-desc">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+
+                        <a href="#" class="benefits__card-more">LEARN MORE</a>
+
+                    </div>
+                    <!-- /benefits__card -->
+
+                </div>
+                <!-- benefits__cards -->
+            </div>
+            <!-- /benefits__wrapper -->
+        </section>
+        <!-- /benefits -->
     </main>
 </body>
 </html>
