created Places block

--- a/index.html
+++ b/index.html
@@ -121,6 +121,67 @@
             <!-- /benefits__wrapper -->
         </section>
         <!-- /benefits -->
+
+
+        <section class="places">            
+            <div class="wrapper__full">
+                <div class="places__caption">
+                    <h2 class="places__title section__title">Get inspired for your next trip</h2>
+
+                    <a href="#" class="places__view-all">VIEW ALL</a>
+                </div>
+                <!-- /places__caption -->
+
+                <div class="places__cards">
+                  
+                    <figure class="places__card places__card-size-lg">
+                        <img src="./img/mount.jpg" alt="Mount Fuji" class="places__card__pic places__card__pic-size-lg">
+                        <figcaption class="places__card-title">
+                            Mount Fuji
+                        </figcaption>
+                        <a href="#" class="places__card-link"></a>
+                    </figure>
+
+                    <figure class="places__card places__card-size-lg">
+                        <img src="./img/kyoto.jpg" alt="Kyoto" class="places__card__pic places__card__pic-size-lg">
+                        <figcaption class="places__card-title">
+                            Kyoto
+                        </figcaption>
+                        <a href="#" class="places__card-link"></a>
+                    </figure>
+
+                    <figure class="places__card places__card-size-sm">
+                        <img src="./img/tokyo.jpg" alt="Tokyo" class="places__card__pic places__card__pic-size-sm">
+                        <figcaption class="places__card-title">
+                            Tokyo
+                        </figcaption>
+                        <a href="#" class="places__card-link"></a>
+                    </figure>
+
+                    <figure class="places__card places__card-size-sm">
+                        <img src="./img/niigata.jpg" alt="Niigata" class="places__card__pic places__card__pic-size-sm">
+                        <figcaption class="places__card-title">
+                            Niigata
+                        </figcaption>
+                        <a href="#" class="places__card-link"></a>
+                    </figure>
+
+                    <figure class="places__card places__card-size-sm">
+                        <img src="./img/sapporo.jpg" alt="Sapporo" class="places__card__pic places__card__pic-size-sm">
+                        <figcaption class="places__card-title">
+                            Sapporo
+                        </figcaption>
+                        <a href="#" class="places__card-link"></a>
+                    </figure>
+
+                </div>
+                <!-- /places__cards -->
+
+            </div>
+            <!-- /wrapper__full -->
+
+        </section>
+        <!-- /places -->
     </main>
 </body>
 </html>
