created Videos block

--- a/index.html
+++ b/index.html
@@ -432,6 +432,18 @@
             <!-- /wrapper__full -->
         </section>
         <!-- /top -->
+
+        <div class="videos">
+            <div class="videos__wrapper">
+                <div class="video__item">
+                </div>               
+                <iframe class="video__element" src="https://www.youtube.com/embed/0nTO4zSEpOs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>                    
+                </iframe>               
+            </div>
+            <!-- /videos__wrapper -->
+        </div>
+        <!-- /videos -->
     </main>
+    <script src="./js/main.js"></script>
 </body>
 </html>
